# ansible-training

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  CHANGELOG.fr.md  CHANGELOG.md  CONTRIBUTING.fr.md  CONTRIBUTING.md  LICENSE  Makefile  README.fr.md  README.md  RELEASING.fr.md  RELEASING.md  SECURITY.fr.md  SECURITY.md  ansible.cfg  cloud-config.yaml  conftest.py  meta.yml  mise.toml  pyproject.toml  requirements.txt  requirements.yml  test.md
.github/: dependabot.yml
.github/workflows/: ci.yml  plumber.yml  release.yml  scorecard.yml
00-Introduction-Ansible/: README.md
01-Inventaires-Statiques/: README.md
01-Inventaires-Statiques/challenge/: README.md
01-Inventaires-Statiques/challenge/tests/: test_inventory.py
02-Playbooks/: README.md
02-Playbooks/challenge/: README.md
02-Playbooks/challenge/tests/: test_playbook.py
02-Playbooks/fichiers/: sample.txt
03-Handlers/: README.md
03-Handlers/challenge/: README.md
03-Handlers/tests/: test_rsyslog.py
03-Templates/: README.md  template.yml
03-Templates/challenge/tests/: test_indexhtml.py
04-Templates/: README.md
04-Templates/challenge/: README.md
04-Templates/challenge/tests/: test_indexhtml_v2.py
05-Filtres/: README.md
05-Inventaires-Dynamiques/: README.md
05-Inventaires-Dynamiques/challenge/: README.md
06-Collection-modules/: README.md
06-Conditions/: README.md  conditions.yml
06-Inventaires-Dynamiques/: README.md
06-Roles/: README.md
07-Blocks/: README.md
07-Conditions/: README.md  incus.yml
07-Conditions/challenge/: README.md
07-Roles/: README.md
08-Blocks/: README.md
08-Roles/: README.md  incus.yml
08-Roles/challenge/: README.md
09-Blocks/: README.md  incus.yml  init.yml
09-Blocks/challenge/: README.md
09-Blocks/challenge/tests/: test_block.py
09-Vault/: README.md  ansible.cfg
10-Customs-Facts/: README.md  incus.yml
10-Vault/: README.md
11-Customs-Facts/: README.md
12-Lookup/: README.md
13-Taches-Asynchrones/: README.md
13-Taches-Asynchrones/challenge/: README.md
docs/: lab-overview.md  lab-skeleton.md  lab-topology.md  troubleshooting.md
dsoxlab/: __init__.py  __main__.py  cli.py  db.py  meta.py  pytest_plugin.py  views.py
ee/: execution-environment.yml
environments/docker/: Dockerfile
infra/virt-install/: destroy.sh  provision.sh
inventory/: hosts.yml
inventory/group_vars/: all.yml
labs/000-prepare-managed-nodes/: Makefile  README.md  playbook.yml
labs/01-decouvrir-declaratif-vs-imperatif/: README.md
labs/02-decouvrir-installation-ansible/: Makefile  README.md
labs/03-decouvrir-prise-en-main-cli/: Makefile  README.md
labs/05-ecrire-code-plays-et-tasks/: README.md
labs/06-ecrire-code-handlers/: README.md
labs/07-ecrire-code-tags/: README.md
labs/08-ecrire-code-checkmode-diff/: README.md
labs/09-ecrire-code-parallelisme-strategies/: README.md
labs/10-ecrire-code-async-poll/: README.md
labs/11-ecrire-code-delegation/: README.md
scripts/: bootstrap.sh  check-solutions-encrypted.sh  export-schemas.sh  insertion_chapitre.sh  lint-all.sh  lock-solutions.sh  manage-hosts.sh  manage-ssh-config.sh  migrate-round2-section-hierarchy.py  migrate-stable-ids.py  rebase-vms.sh  render-readme.py  restore-vms.sh  setup-lab-vault-passwords.sh  snapshot-vms.sh  solutions-status.sh  solve.sh  test-all.sh  unlock-solutions.sh
ssh/: README.md
tests/: test_doc_urls.py  test_liens_internes.py  test_outillage_coherent.py  test_solutions_chiffrees.py  test_variables_ansible.py
(+1908 files in other folders)
